--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.4
+python-dotenv==1.0.1
 requests==2.31.0
 urllib3==2.1.0
 Werkzeug==3.0.1
