--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,15 @@ certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
 Flask==3.0.1
+Flask-SQLAlchemy==3.1.1
 idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.4
 python-dotenv==1.0.1
 requests==2.31.0
+SQLAlchemy==2.0.25
+typing_extensions==4.9.0
 urllib3==2.1.0
 Werkzeug==3.0.1
 youtube-transcript-api==0.6.2
