--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.4
+psycopg2==2.9.9
 python-dotenv==1.0.1
 requests==2.31.0
 SQLAlchemy==2.0.25
