--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Jinja2==3.1.3
 MarkupSafe==2.1.4
 psycopg2-binary==2.9.9
 python-dotenv==1.0.1
+pytz==2023.4
 requests==2.31.0
 SQLAlchemy==2.0.25
 typing_extensions==4.9.0
